--- a/contact.html
+++ b/contact.html
@@ -50,8 +50,8 @@
                     <p> Tuesday-Friday 10h-20h </p>
                     <p> Saturday-Sunday 11h-19h </p>
                 </div>
-                <div class="info">
-            <div>
+            <div class="info">
+            <div class="box">
                 <p> For more informations you can: </p>
                 <p> E-mail us: <br> scimuse@community.com </p>
                 <p> Or give us a call: <br> 96 99 66 69 </p>
