--- a/events/explore.html
+++ b/events/explore.html
@@ -28,7 +28,7 @@
         <main class="explore">
             <h1 class="main_heading"> Explore </h1> 
             <section class="explore_page">
-              <div class="one">
+              <div class="one box">
                 <img src="../images/kidreading1.jpg" alt="Kid reading a book" class="background_image" >
                     <h2 class="heading"> For Kids</h2>
                     <p> Are you a young person looking to learn more about science? Come on down to our museum, there is plenty to see and do. </p>
@@ -39,13 +39,14 @@
                        <p> During the scool holidays we run special holiday clubs where you can join other children your age to go on a journe of discovery. Each holiday we pick a new theme to explore. </p>
                     <p> To find out more about them and how you can join, send us a message.</p>
                 </div>
-                <div>
+                <div class="box">
                     <img src="../images/ajnstajn1.jpg" alt="Albert Ainstains grafit on the wall" class="background_image">
                     <h2 class="heading"> For Teachers </h2>
                     <p> As a community-driven museum, we want to work with schools to create places of learning and exploring. </p> 
                     <p> Our team is on hand to give your students guided tours of the museum, teach them in our learning laboratory, and provide great video presentations that will excite and inspire them. </p>
-                    <p> Please get in touch with us here to find out more about our facilities and to arrange a time to bring your students through for a visit. </p></div> 
-                <div>
+                    <p> Please get in touch with us here to find out more about our facilities and to arrange a time to bring your students through for a visit. </p>
+                </div> 
+                <div class="box">
                     <img src="../images/research1.jpg" alt="Scientist looking in the microscope" class="background_image">
                     <h2 class="heading"> For Researchers </h2>
                     <p> Are you looking to get involved with our team of researchers and academics? Our museum offers various ways towards them. We have online recods, labaratory space and a working relationship with a number of universities around the country.</p> 
