--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
         <main>
             <div> <img src="images/museum-3.jpg" alt="Museum from outside" class="background_image museum"> </div>
             <section class="wrap">
-            <div><input type="button" value="Visit Our Exhibition" class="homepage_button"></div>
+            <div><a href="events/exhibits.html"><input type="button" value="Visit Our Exhibition" class="homepage_button"></a></div>
             <section class="exhibit_home_display">
             <section class="container">
                     <div>
                         <h2>COSMOLOGY</h2>
-                        <p>Read more</p>
+                        <p> <a href="events/exhibits.html#cosmology">Read more</a></p>
                     </div>
                     <div>
                         <img src="images/skyandstars1.jpg" alt="Sky and Stars" class="add_image">
@@ -42,7 +42,7 @@
                 <section class="container">
                     <div>
                         <h2>ROBOTICS & AI</h2>
-                        <p>Read more</p>
+                        <p> <a href="events/exhibits.html#robotics">Read more</a></p>
                     </div>
                     <div>
                         <img src="images/roboticsandai1.jpg" alt="Robot on the bench reading from tablet" class="add_image">
@@ -51,7 +51,7 @@
                 <section class="container">
                     <div>
                         <h2>ECOLOGY</h2>
-                        <p>Read more</p>
+                        <p> <a href="events/exhibits.html#ecology">Read more</a></p>
                     </div>
                     <div>
                         <img src="images/ecology1.jpg" alt="Trees above head, pointing to the sky" class="add_image">
@@ -63,14 +63,14 @@
                 </section>
                 <section class="news">
                     <div class="wrap_box">
-                        <img src="images/visitingprof2.jpg" alt="Man inside of a " class="news_image">
+                        <img src="images/visitingprof2.jpg" alt="Man having a lecture in amfitheater" class="news_image sizing">
                         <h3>Visiting Professor of Aeronautics</h3>
-                        <p>Read more</p>
+                        <p> <a href="events/news.html#visit"> Read more </a></p>
                     </div>
                     <div class="wrap_box">
-                        <img src="images/nightinthemuseum1.jpg" alt="Night in the museum hall" class="news_image">
+                        <img src="images/nightinthemuse-2.jpg" alt="Night in the museum hall" class="news_image">
                         <h3>Night in the Museum</h3>
-                        <p>Read more</p>
+                        <p> <a href="events/news.html#night">Read more</a></p>
                     </div>
                 </section>
         </main>
@@ -89,7 +89,7 @@
                     <p> <a href="https://www.linkedin.com"><i class="fa-brands fa-linkedin"></i></a></p>
                 </div>
                 <div>
-                    <a href="events/getinvolved.html"><input type="button" value="Donate" class="donate_button"></a>
+                    <a href="events/getinvolved.html#donate"><input type="button" value="Donate" class="donate_button"></a>
                 </div>
                 <div>
                    <p>Holmen gata 14, 1090 Oslo </p> 
