--- a/events/getinvolved.html
+++ b/events/getinvolved.html
@@ -29,19 +29,19 @@
             <img src="../images/handshake.png" alt="Handshake improvised " class="background_image">
             <h1 class="getinvolved" > Get Involved </h1>
             <section class="get_involved">
-            <div>
+            <div class="box">
                 <img src="../images/donations.webp" alt="All kinds of donations on the picture" class="background_image">
-                <h2 class="heading"> Support </h2>
+                <h2 class="heading" id="donate"> Support </h2>
                 <p> There are various ways you can support the museum. Donations are very welcome and are an important way we keep this museum open and accessible to the whole community. </p>
                 <p> You can also support us by donating items of interest to the museums collections. If you have some item or collection that you think others would enjoy, please let us know by contacting our Collections Department and they will be able to assist you. </p>
             </div>
-            <div>
+            <div class="box">
                 <img src="../images/volunteers.jpg" alt="Group of volunteers happy to volunteer" class="background_image">
                 <h2 class="heading"> Volunteer </h2>
                 <p> A number of people volunteer their time and effort to keep the displays in good order and ready for visitors to come and enjoy. Volunteering has its perks including getting to see behind the scenes ofa working museum, access to staff-only lectures, and a monthly lunch where all staff and volunteers come together to discuss ideas for future exhibits and strategies for the museum. </p>
                 <p> You can help volunteer in a number of different spheres. Please contact us if you would like to find out more about how you can get involved. </p>
             </div>
-            <div> 
+            <div class="box"> 
                 <img src="../images/skeleton1.jpg" alt="Skeletons in the window - exhibit" class="background_image">
                 <h2 class="heading"> Internship </h2>
                 <p> Are you interested in working in a museum? Do you enjoy the fun and excitement of sharing the wonders of nature with people? Well, you could be just the right person to enjoy an internship at the museum. </p>
