--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <main>
             <div> <img src="images/museum-3.jpg" alt="Museum from outside" class="background_image museum"> </div>
             <section class="wrap">
-            <div><a href="events/exhibits.html"><input type="button" value="Visit Our Exhibition" class="homepage_button"></a></div>
+            <div><a href="events/exhibits.html" aria-label="visit_exhibits"><input type="button" value="Visit Our Exhibition" class="homepage_button"></a></div>
             <section class="exhibit_home_display">
             <section class="container">
                     <div>
@@ -77,7 +77,7 @@
         <footer>
             <section>
                 <div class="newsletter">
-                    <label for="email">Leave your e-mail and subscribe for newsletter:</label><br>
+                    <label for="email" class="footer_info">Leave your e-mail and subscribe for newsletter:</label><br>
                     <div>
                         <input type="text" name="email" id="email">
                         <input type="button" value="Subscribe" class="signin">
@@ -95,7 +95,7 @@
                    <p>Holmen gata 14, 1090 Oslo </p> 
                    <p>Opening hours: <br> Monday: Closed <br> Tuesday-Friday: 10h-20h <br> Saturday-Sunday: 11h-19h</p>
                 </div>
-                <p> &#169; SciMuse 2022 </p>
+                <p class="footer_info"> &#169; SciMuse 2022 </p>
             </section>
         </footer>
     </body>
