--- a/booking/checkout.html
+++ b/booking/checkout.html
@@ -55,25 +55,25 @@
         <footer>
             <section>
                 <div class="newsletter">
-                    <label for="email">Leave your e-mail and subscribe for newsletter:</label> <br>
+                    <label for="email" class="footer_info">Leave your e-mail and subscribe for newsletter:</label><br>
                     <div>
                         <input type="text" name="email" id="email">
-                        <input type="button" value="Sign in" class="signin">
+                        <input type="button" value="Subscribe" class="signin">
                     </div>
                 </div>
                 <div class="icons_sm">
-                    <p> <a href="https://www.facebook.com"><i class="fa-brands fa-facebook"></i></a></p>
-                    <p> <a href="https://twitter.com"><i class="fa-brands fa-square-twitter"></i></a></p>
-                    <p> <a href="https://www.linkedin.com"><i class="fa-brands fa-linkedin"></i></a></p>
+                    <p> <a href="https://www.facebook.com" aria-label="facebook_logo"><i class="fa-brands fa-facebook"></i></a></p>
+                    <p> <a href="https://twitter.com" aria-label="twitter_logo"><i class="fa-brands fa-square-twitter"></i></a></p>
+                    <p> <a href="https://www.linkedin.com" aria-label="linkedin_logo"><i class="fa-brands fa-linkedin"></i></a></p>
                 </div>
                 <div>
-                    <a href="../events/getinvolved.html"><input type="button" value="Donate" class="donate_button"></a>
+                    <a href="events/getinvolved.html#donate" aria-label="donate"><input type="button" value="Donate" class="donate_button"></a>
                 </div>
-                <div>
+                <div class="footer_info">
                    <p>Holmen gata 14, 1090 Oslo </p> 
-                   <p>Opening hours: Monday: Closed <br> Tuesday-Friday: 10h-20h <br> Saturday-Sunday: 11h-19h</p>
+                   <p>Opening hours: <br> Monday: Closed <br> Tuesday-Friday: 10h-20h <br> Saturday-Sunday: 11h-19h</p>
                 </div>
-                <p> &#169; SciMuse 2022 </p>
+                <p class="footer_info"> &#169; SciMuse 2022 </p>
             </section>
         </footer>
     </body>
