--- a/booking/success.html
+++ b/booking/success.html
@@ -35,29 +35,29 @@
             </div>
                <a href="../events/exhibits.html"> <input type="button" value="Go Back" class="checkout_buttons"></a>
     </main>
-        <footer>
-            <section>
-                <div class="newsletter">
-                    <label for="email">Leave your e-mail and subscribe for newsletter:</label> <br>
-                    <div>
-                        <input type="text" name="email" id="email">
-                        <input type="button" value="Sign in" class="signin">
-                    </div>
-                </div>
-                <div class="icons_sm">
-                    <p> <a href="https://www.facebook.com"><i class="fa-brands fa-facebook"></i></a></p>
-                    <p> <a href="https://twitter.com"><i class="fa-brands fa-square-twitter"></i></a></p>
-                    <p> <a href="https://www.linkedin.com"><i class="fa-brands fa-linkedin"></i></a></p>
-                </div>
+    <footer>
+        <section>
+            <div class="newsletter">
+                <label for="email" class="footer_info">Leave your e-mail and subscribe for newsletter:</label><br>
                 <div>
-                    <a href="../events/getinvolved.html"><input type="button" value="Donate" class="donate_button"></a>
+                    <input type="text" name="email" id="email">
+                    <input type="button" value="Subscribe" class="signin">
                 </div>
-                <div>
-                   <p>Holmen gata 14, 1090 Oslo </p> 
-                   <p>Opening hours: Monday: Closed <br> Tuesday-Friday: 10h-20h <br> Saturday-Sunday: 11h-19h</p>
-                </div>
-                <p> &#169; SciMuse 2022 </p>
-            </section>
-        </footer>
+            </div>
+            <div class="icons_sm">
+                <p> <a href="https://www.facebook.com" aria-label="facebook_logo"><i class="fa-brands fa-facebook"></i></a></p>
+                <p> <a href="https://twitter.com" aria-label="twitter_logo"><i class="fa-brands fa-square-twitter"></i></a></p>
+                <p> <a href="https://www.linkedin.com" aria-label="linkedin_logo"><i class="fa-brands fa-linkedin"></i></a></p>
+            </div>
+            <div>
+                <a href="events/getinvolved.html#donate" aria-label="donate"><input type="button" value="Donate" class="donate_button"></a>
+            </div>
+            <div class="footer_info">
+               <p>Holmen gata 14, 1090 Oslo </p> 
+               <p>Opening hours: <br> Monday: Closed <br> Tuesday-Friday: 10h-20h <br> Saturday-Sunday: 11h-19h</p>
+            </div>
+            <p class="footer_info"> &#169; SciMuse 2022 </p>
+        </section>
+    </footer>
     </body>
 </html>
