--- a/events/exhibits.html
+++ b/events/exhibits.html
@@ -33,57 +33,57 @@
                 <img src="../images/skyandstars1.jpg" alt="Universe sky and stars" class="background_image">
                 <p> Explore the wonders of our cosmos. Our fantastic exhibition, “The Sky Above Us”, explores the night sky and what we can see and know about the universe around us. We will locate the various constellations and galaxies that can be seen and learn a bit about the early navigators who used the stars to travel by. 
                     Follow the journey of our solar exploration: from early Arab traders, to Galileos telescope, to the latest exploration of the planets in our solar system.</p>
-                <a href="../booking/booking.html" alt="Sending to booking"><input type="button" value="Book a ticket" class="book_ticket"></a>
+                <a href="../booking/booking.html" aria-label="booking"><input type="button" value="Book a ticket" class="book_ticket"></a>
             </div>
             <div class="box" id="robotics">
                 <img src="../images/roboticsandai1.jpg" alt="Robot sitting on the bench and reading from a tablet" class="background_image">
                 <p> The information revolution is here and robotics and artificial intelligence are the science of the future. From useful home applications of AI to industrial uses of robotics, the future is here. 
                     You can even say hello and shake the hand of the Rob the Robot. </p>
-                <a href="../booking/booking.html"><input type="button" value="Book a ticket" class="book_ticket"></a>
+                <a href="../booking/booking.html" aria-label="booking"><input type="button" value="Book a ticket" class="book_ticket"></a>
             </div>
             <div class="box" id="ecology">
                 <img src="../images/ecology1.jpg" alt="Green trees pointing to the sky" class="background_image">
                 <p> As we learn more and more of the impact humans are having on the planet, the more important it becomes that scientists explore how to create a sustainable future, not just for humans, but for the whole  planet.
                     In our ecology section of the museum, we unpack the dangers we currently face including global warming, extinction of species, and pollution. But we also focus on the positive ways we can all contribute to a brighter future.</p>
-                <a href="../booking/booking.html"><input type="button" value="Book a ticket" class="book_ticket"></a>
+                <a href="../booking/booking.html" aria-label="booking"><input type="button" value="Book a ticket" class="book_ticket"></a>
             </div>
             <div class="box">
                 <img src="../images/mammoth1.jpg" alt="Mamooth exhibit in the museum" class="background_image">
                 <p> For centuries, philosophers and scientists have wrestled with the question of our origins. Where do we come from and how did we get here? SinceDarwin proposed his theory of evolution we have had a framework for exploring and understanding our place in this world.
                     Discover the origins of life on this planet and how the species we know today have evolved our time. You can also take some time to meet a few of the creatures who did not survive, including our Wolly Mammoth, the Dodos and a number of dinosaurs too. </p>
-               <a href="../booking/booking.html"><input type="button" value="Book a ticket" class="book_ticket"></a>
+               <a href="../booking/booking.html" aria-label="booking"><input type="button" value="Book a ticket" class="book_ticket"></a>
             </div>
             <div class="box">
                 <img src="../images/biologyandmedicine1.jpg" alt="doll exhibit of a human body" class="background_image">
                 <p>From micro-organism to the human body, major breaktroughs in biology are offering us unique insights into the great wonders of the tiny world.
                     For many people their life expectancy is much longer and their quality of life much improved, thanks to the growth of our understanding of medicine. Over a series of exhibits we explore the history of medicine and take a look at some major breakthroughs including the discovery of penicilin and the first heart transplant.
                     Many of our great medicinal discoveries have come not only from the lab, but also from observing animals in the wild. Often our fellow creatures have beat us to it.</p>
-                <a href="../booking/booking.html"><input type="button" value="Book a ticket" class="book_ticket"></a>
+                <a href="../booking/booking.html" aria-label="booking"><input type="button" value="Book a ticket" class="book_ticket"></a>
             </div>
         </section>
         </main>
         <footer>
             <section>
                 <div class="newsletter">
-                    <label for="email">Leave your e-mail and subscribe for newsletter:</label> <br>
+                    <label for="email" class="footer_info">Leave your e-mail and subscribe for newsletter:</label><br>
                     <div>
                         <input type="text" name="email" id="email">
-                        <input type="button" value="Sign in" class="signin">
+                        <input type="button" value="Subscribe" class="signin">
                     </div>
                 </div>
                 <div class="icons_sm">
-                    <p> <a href="https://www.facebook.com"><i class="fa-brands fa-facebook"></i></a></p>
-                    <p> <a href="https://twitter.com"><i class="fa-brands fa-square-twitter"></i></a></p>
-                    <p> <a href="https://www.linkedin.com"><i class="fa-brands fa-linkedin"></i></a></p>
+                    <p> <a href="https://www.facebook.com" aria-label="facebook_logo"><i class="fa-brands fa-facebook"></i></a></p>
+                    <p> <a href="https://twitter.com" aria-label="twitter_logo"><i class="fa-brands fa-square-twitter"></i></a></p>
+                    <p> <a href="https://www.linkedin.com" aria-label="linkedin_logo"><i class="fa-brands fa-linkedin"></i></a></p>
                 </div>
                 <div>
-                    <a href="getinvolved.html"><input type="button" value="Donate" class="donate_button"></a>
+                    <a href="getinvolved.html#donate" aria-label="donate"><input type="button" value="Donate" class="donate_button"></a>
                 </div>
-                <div>
+                <div class="footer_info">
                    <p>Holmen gata 14, 1090 Oslo </p> 
-                   <p>Opening hours: Monday: Closed <br> Tuesday-Friday: 10h-20h <br> Saturday-Sunday: 11h-19h</p>
+                   <p>Opening hours: <br> Monday: Closed <br> Tuesday-Friday: 10h-20h <br> Saturday-Sunday: 11h-19h</p>
                 </div>
-                <p> &#169; SciMuse 2022 </p>
+                <p class="footer_info"> &#169; SciMuse 2022 </p>
             </section>
         </footer>
     </body>
