--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     </head>
     <body>
         <header>
-            <div><img src="images/logo.png" alt="Logo of the Museum"></div>
+            <div><a href="index.html"><img src="images/logo.png" alt="Logo of the Museum"></a></div>
             <div class="hamburger_menu"><label for="hamburger_menu"><i class="fa-solid fa-bars"><span class="hidden">hamburger menu</span></i></label> </div>
             <input type="checkbox" id="hamburger_menu">
             <nav>
-                <ul >
-                    <li> <a href="index.html" class="active"> HOME </a></li>
-                    <li> <a href="events/exhibits.html"> EXHIBITS </a> </li>
+                <ul>
+                    <li> <a href="index.html"class="active"> HOME </a></li>
+                    <li> <a href="events/exhibits.html" > EXHIBITS </a> </li>
                     <li> <a href="events/explore.html"> EXPLORE </a></li>
                     <li> <a href="events/getinvolved.html"> GET INVOLVED </a></li>
                     <li> <a href="events/news.html"> NEWS </a></li>
@@ -24,9 +24,10 @@
                     <li> <a href="contact.html"> CONTACT </a> </li>
                 </ul>
             </nav>
+            
         </header>
         <main>
-            <div> <img src="images/museum-3.jpg" alt="Museum from outside" class="background_image museum"> </div>
+            <section class="home_background"></section>
             <section class="wrap">
             <div><a href="events/exhibits.html" aria-label="visit_exhibits"><input type="button" value="Visit Our Exhibition" class="homepage_button"></a></div>
             <section class="exhibit_home_display">
