--- a/about.html
+++ b/about.html
@@ -45,6 +45,19 @@
             <h2 class="heading_news"> Accessibility </h2>
             <p> The museum has a wheelchair accessibility ramps. It also has audio guides and braille display signs for the visually impaired. </p>
         </div>
+        <section class="coffe_shop">
+            <img src="images/cafe1.jpg" alt="Coffee place in the museum" class="background_image_2">
+            <div class="divided">
+                <div class="left_side">
+                    <h2> Food and drink </h2>
+                    <p> There is cafe attached to the museum where you can get light lunches, soft drinks, coffee, snacks and more. </p>
+                </div>
+                <div class="right_side">
+                    <h2> Shop </h2>
+                    <p> Our shop offers a range of memorabilia from the museum as well as great gifts and activity packs that allow you to continue to explore science even after you have left the museum. </p>
+                </div>
+            </div>
+            </section>
         </main>
         <footer>
             <section>
