--- a/booking/booking.html
+++ b/booking/booking.html
@@ -27,9 +27,9 @@
         </header>
         <main class="booking_headline">
             <h1> Booking Exhibitions </h1> 
-               <div class="booking kids"> <p>Kids</p> <p>50nok</p> </div>
-               <div class="booking students"> <p> Students </p> <p> 60nok </p> </div>
-               <div class="booking adults"> <p> Adults </p> <p> 70nok </p> </div>
+               <div class="booking kids"> <p>Kids</p> <p>50nok</p> <p> <select name="book" id="book"> <option value="0"> 0</option><option value="1"> 1</option> <option value="2"> 2</option> <option value="3"> 3</option> <option value="4"> 4</option> <option value="5"> 5</option></select></p> </div>
+               <div class="booking students"> <p> Students </p> <p> 60nok </p> <p> <select name="book" id="book"> <option value="0"> 0</option><option value="1"> 1</option> <option value="2"> 2</option> <option value="3"> 3</option> <option value="4"> 4</option> <option value="5"> 5</option></select></p></div>
+               <div class="booking adults"> <p> Adults </p> <p> 70nok </p> <p> <select name="book" id="book"> <option value="0"> 0</option><option value="1"> 1</option> <option value="2"> 2</option> <option value="3"> 3</option> <option value="4"> 4</option> <option value="5"> 5</option></select></p></div>
             <div class="continue"> 
                 <a href="checkout.html"> <input type="button" value="Continue" class="checkout_buttons"> </a>
             </div>
