--- a/events/news.html
+++ b/events/news.html
@@ -50,9 +50,9 @@
                <div class="box news_2">
                     <h2 class="heading_news"> Energetica Exhibition on Loan </h2>
                     <div class="news_divide">
-                    <img src="../images/science-2.jpg" alt="Scientist in front of huge machine" class="background_image">
+                    <img src="../images/wind_mills.jpg" alt="Field full of wind mills" class="background_image">
                     <p> On loan from the NEMO Science Museum in Amsterdam, the Energetica exhibition is coming in February to the Community Science Museum.
-                    It is a series of installations that allow visitors to experience the power of the elements as we harness them. <br> From solar energy powering lighting, to “Wind Island” that shows how turbines are able to use and control wind to create power </p>
+                    It is a series of installations that allow visitors to experience the power of the elements as we harness them. <br> From solar energy powering lighting, to “Wind Island” that shows how turbines are able to use and control wind to create power. </p>
                 </div>
             </div>   
         </section>
