--- a/booking/checkout.html
+++ b/booking/checkout.html
@@ -67,7 +67,7 @@
                     <p> <a href="https://www.linkedin.com" aria-label="linkedin_logo"><i class="fa-brands fa-linkedin"></i></a></p>
                 </div>
                 <div>
-                    <a href="events/getinvolved.html#donate" aria-label="donate"><input type="button" value="Donate" class="donate_button"></a>
+                    <a href="../events/getinvolved.html#donate" aria-label="donate"><input type="button" value="Donate" class="donate_button"></a>
                 </div>
                 <div class="footer_info">
                    <p>Holmen gata 14, 1090 Oslo </p> 
