--- a/booking/success.html
+++ b/booking/success.html
@@ -33,7 +33,9 @@
             <div class="continue">
                 <p> Looking forward to seeing you in our museum. </p>
             </div>
-               <a href="../events/exhibits.html"> <input type="button" value="Go Back" class="checkout_buttons"></a>
+              <section class="continue">
+                <a href="../events/exhibits.html"> <input type="button" value="Go Back" class="checkout_buttons"></a>
+              </section>
     </main>
     <footer>
         <section>
@@ -50,7 +52,7 @@
                 <p> <a href="https://www.linkedin.com" aria-label="linkedin_logo"><i class="fa-brands fa-linkedin"></i></a></p>
             </div>
             <div>
-                <a href="events/getinvolved.html#donate" aria-label="donate"><input type="button" value="Donate" class="donate_button"></a>
+                <a href="../events/getinvolved.html#donate" aria-label="donate"><input type="button" value="Donate" class="donate_button"></a>
             </div>
             <div class="footer_info">
                <p>Holmen gata 14, 1090 Oslo </p> 
