--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     </head>
     <body>
         <header>
-            <div><a href="index.html"><img src="images/logo.png" alt="Logo of the Museum"></a></div>
+            <div><a href="index.html"><img src="images/logo1.png" alt="Logo of the Museum"></a></div>
             <div class="hamburger_menu"><label for="hamburger_menu"><i class="fa-solid fa-bars"><span class="hidden">hamburger menu</span></i></label> </div>
             <input type="checkbox" id="hamburger_menu">
             <nav>
                 <ul>
-                    <li> <a href="index.html"class="active"> HOME </a></li>
+                    <li> <a href="index.html" class="active"> HOME </a></li>
                     <li> <a href="events/exhibits.html" > EXHIBITS </a> </li>
                     <li> <a href="events/explore.html"> EXPLORE </a></li>
                     <li> <a href="events/getinvolved.html"> GET INVOLVED </a></li>
@@ -24,7 +24,6 @@
                     <li> <a href="contact.html"> CONTACT </a> </li>
                 </ul>
             </nav>
-            
         </header>
         <main>
             <section class="home_background"></section>
